Wyjazd z garzażu + nowy model garażu

--- a/main/main/Assembly-CSharp.csproj
+++ b/main/main/Assembly-CSharp.csproj
@@ -71,6 +71,7 @@
      <Compile Include="Assets\Scripts\SkidTrail.cs" />
      <Compile Include="Assets\Scripts\TileManager.cs" />
      <Compile Include="Assets\Scripts\TuningScene.cs" />
+     <Compile Include="Assets\Scripts\WyjazdGaraz.cs" />
      <Compile Include="Assets\Speedometer\Speedometer.cs" />
      <None Include="Assets\Clients.txt" />
  <Reference Include="Unity.TextMeshPro.Editor">
